k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: germa
  labels:
    name: germa
