k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-site-stage
  namespace: germa
  labels:
    app: static-site-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-site-stage
  template:
    metadata:
      labels:
        app: static-site-stage
    spec:
      containers:
      - name: static-site-stage
        image: gsdatalakecr.azurecr.io/gs-datalake/germa-frontend-stage:latest
        ports:
        - containerPort: 80
