k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-site-stage
  namespace: germa
spec:
  selector:
    app: static-site-stage
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
