k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: germa-ingress-stage
  namespace: germa
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  ingressClassName: ingress-internal
  tls:
  - hosts:
    - "germa-tool.gs-local.germa.de"
    secretName: germa-tls-stage
  rules:
  - host: germa-tool.gs-local.germa.de
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: germag-backend-stage # TODO change
            port:
              number: 80
